--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <link rel="stylesheet" href="style.css">
     <!-- Don't forget to link your CSS file! -->
+    <style></style>
   </head>
   <body>
     <header>
